exploratory data analysis html

--- a/Part_I_exploration.html
+++ b/Part_I_exploration.html
@@ -15308,140 +15308,20 @@ memory usage: 68.1+ MB
   </thead>
   <tbody>
     <tr>
-      <th>79418</th>
-      <td>68213543313465530DF5F7E</td>
-      <td>575791</td>
-      <td>2012-04-05 12:48:01.137000000</td>
-      <td>NaN</td>
-      <td>36</td>
-      <td>Defaulted</td>
-      <td>2013-12-16 00:00:00</td>
-      <td>0.17359</td>
-      <td>0.1449</td>
-      <td>0.1349</td>
-      <td>...</td>
-      <td>-73.07</td>
-      <td>0.00</td>
-      <td>4445.25</td>
-      <td>4445.25</td>
-      <td>0.0</td>
-      <td>1.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.0</td>
-      <td>101</td>
-    </tr>
-    <tr>
-      <th>27125</th>
-      <td>BDC1347134828440087A311</td>
-      <td>437950</td>
-      <td>2009-12-10 13:02:42.937000000</td>
-      <td>NaN</td>
-      <td>36</td>
-      <td>Completed</td>
-      <td>2010-06-02 00:00:00</td>
-      <td>0.29385</td>
-      <td>0.2705</td>
-      <td>0.2605</td>
-      <td>...</td>
-      <td>-16.69</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.0</td>
-      <td>1.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.0</td>
-      <td>58</td>
-    </tr>
-    <tr>
-      <th>5270</th>
-      <td>0762359188070523646CCD3</td>
-      <td>954294</td>
-      <td>2013-10-03 11:20:20.553000000</td>
-      <td>NaN</td>
-      <td>60</td>
-      <td>Current</td>
-      <td>NaN</td>
-      <td>0.21115</td>
-      <td>0.1870</td>
-      <td>0.1770</td>
-      <td>...</td>
-      <td>-21.57</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.0</td>
-      <td>1.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.0</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>33266</th>
-      <td>96643593200915772B54F61</td>
-      <td>1008668</td>
-      <td>2013-11-10 16:18:35.520000000</td>
-      <td>NaN</td>
-      <td>60</td>
-      <td>Current</td>
-      <td>NaN</td>
-      <td>0.20808</td>
-      <td>0.1840</td>
-      <td>0.1740</td>
-      <td>...</td>
-      <td>-32.42</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.0</td>
-      <td>1.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.0</td>
-      <td>20</td>
-    </tr>
-    <tr>
-      <th>18472</th>
-      <td>B98B3367583619906F83022</td>
-      <td>35975</td>
-      <td>2006-09-01 08:36:49.460000000</td>
-      <td>C</td>
-      <td>36</td>
-      <td>Completed</td>
-      <td>2009-09-07 00:00:00</td>
-      <td>0.25757</td>
-      <td>0.2500</td>
-      <td>0.2400</td>
-      <td>...</td>
-      <td>-103.52</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.0</td>
-      <td>1.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.0</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <th>42993</th>
-      <td>7F0C3533019836713621699</td>
-      <td>542554</td>
-      <td>2011-12-04 05:59:38.380000000</td>
+      <th>45270</th>
+      <td>A2F23601269955765E25DAB</td>
+      <td>1161327</td>
+      <td>2014-01-26 15:12:47.153000000</td>
       <td>NaN</td>
       <td>36</td>
       <td>Current</td>
       <td>NaN</td>
-      <td>0.35244</td>
-      <td>0.3123</td>
-      <td>0.3023</td>
+      <td>0.14206</td>
+      <td>0.1139</td>
+      <td>0.1039</td>
       <td>...</td>
-      <td>-71.84</td>
-      <td>0.00</td>
+      <td>-5.34</td>
+      <td>0.0</td>
       <td>0.00</td>
       <td>0.00</td>
       <td>0.0</td>
@@ -15449,73 +15329,73 @@ memory usage: 68.1+ MB
       <td>0</td>
       <td>0</td>
       <td>0.0</td>
-      <td>41</td>
+      <td>134</td>
     </tr>
     <tr>
-      <th>95597</th>
-      <td>F30A347301261608489D700</td>
-      <td>442941</td>
-      <td>2010-01-16 15:33:07.637000000</td>
-      <td>NaN</td>
-      <td>36</td>
-      <td>Completed</td>
-      <td>2012-09-24 00:00:00</td>
-      <td>0.35301</td>
-      <td>0.3288</td>
-      <td>0.3188</td>
-      <td>...</td>
-      <td>-51.19</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.0</td>
-      <td>1.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.0</td>
-      <td>48</td>
-    </tr>
-    <tr>
-      <th>74776</th>
-      <td>39BD35874226986644D70D9</td>
-      <td>887223</td>
-      <td>2013-09-04 12:30:52.577000000</td>
-      <td>NaN</td>
-      <td>36</td>
-      <td>Current</td>
-      <td>NaN</td>
-      <td>0.13697</td>
-      <td>0.1089</td>
-      <td>0.0989</td>
-      <td>...</td>
-      <td>-19.95</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.0</td>
-      <td>1.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.0</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>41304</th>
-      <td>DDFB33925330452439AC7A3</td>
-      <td>153129</td>
-      <td>2007-06-16 11:27:33.143000000</td>
-      <td>C</td>
+      <th>47800</th>
+      <td>E61B3414512240873925E64</td>
+      <td>282432</td>
+      <td>2008-02-20 20:51:55.643000000</td>
+      <td>D</td>
       <td>36</td>
       <td>Chargedoff</td>
-      <td>2010-01-22 00:00:00</td>
-      <td>0.19730</td>
-      <td>0.1900</td>
-      <td>0.1800</td>
+      <td>2008-08-27 00:00:00</td>
+      <td>0.37453</td>
+      <td>0.3500</td>
+      <td>0.3400</td>
       <td>...</td>
-      <td>-39.72</td>
-      <td>-32.64</td>
-      <td>1168.41</td>
-      <td>1168.41</td>
+      <td>-3.58</td>
+      <td>0.0</td>
+      <td>4421.58</td>
+      <td>4421.58</td>
+      <td>0.0</td>
+      <td>1.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.0</td>
+      <td>60</td>
+    </tr>
+    <tr>
+      <th>8472</th>
+      <td>5F47353253850626032DD12</td>
+      <td>541989</td>
+      <td>2011-11-30 17:39:37.753000000</td>
+      <td>NaN</td>
+      <td>36</td>
+      <td>Completed</td>
+      <td>2013-07-09 00:00:00</td>
+      <td>0.35797</td>
+      <td>0.3177</td>
+      <td>0.3077</td>
+      <td>...</td>
+      <td>-48.44</td>
+      <td>0.0</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.0</td>
+      <td>1.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.0</td>
+      <td>7</td>
+    </tr>
+    <tr>
+      <th>57201</th>
+      <td>C6873522578427056733FBA</td>
+      <td>517840</td>
+      <td>2011-07-24 22:11:21.290000000</td>
+      <td>NaN</td>
+      <td>36</td>
+      <td>Completed</td>
+      <td>2011-09-13 00:00:00</td>
+      <td>0.30532</td>
+      <td>0.2699</td>
+      <td>0.2599</td>
+      <td>...</td>
+      <td>-2.51</td>
+      <td>0.0</td>
+      <td>0.00</td>
+      <td>0.00</td>
       <td>0.0</td>
       <td>1.0</td>
       <td>0</td>
@@ -15524,20 +15404,20 @@ memory usage: 68.1+ MB
       <td>39</td>
     </tr>
     <tr>
-      <th>54537</th>
-      <td>4DC73591307538453AE39E7</td>
-      <td>956874</td>
-      <td>2013-10-04 06:09:53.323000000</td>
-      <td>NaN</td>
+      <th>59206</th>
+      <td>253B3374991394321E8309B</td>
+      <td>72516</td>
+      <td>2006-12-09 11:12:26.047000000</td>
+      <td>E</td>
       <td>36</td>
-      <td>Current</td>
-      <td>NaN</td>
-      <td>0.19859</td>
-      <td>0.1620</td>
-      <td>0.1520</td>
+      <td>Completed</td>
+      <td>2007-02-20 00:00:00</td>
+      <td>0.15713</td>
+      <td>0.1500</td>
+      <td>0.1450</td>
       <td>...</td>
-      <td>-27.27</td>
-      <td>0.00</td>
+      <td>-2.06</td>
+      <td>0.0</td>
       <td>0.00</td>
       <td>0.00</td>
       <td>0.0</td>
@@ -15545,7 +15425,127 @@ memory usage: 68.1+ MB
       <td>0</td>
       <td>0</td>
       <td>0.0</td>
-      <td>59</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <th>5034</th>
+      <td>4C623534368401056755FD9</td>
+      <td>545155</td>
+      <td>2011-12-16 16:36:11.513000000</td>
+      <td>NaN</td>
+      <td>60</td>
+      <td>Current</td>
+      <td>NaN</td>
+      <td>0.32989</td>
+      <td>0.3027</td>
+      <td>0.2927</td>
+      <td>...</td>
+      <td>-115.51</td>
+      <td>0.0</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.0</td>
+      <td>1.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.0</td>
+      <td>54</td>
+    </tr>
+    <tr>
+      <th>26374</th>
+      <td>6675346302146397868354C</td>
+      <td>424795</td>
+      <td>2009-09-17 13:21:52.963000000</td>
+      <td>NaN</td>
+      <td>36</td>
+      <td>Completed</td>
+      <td>2012-09-30 00:00:00</td>
+      <td>0.24807</td>
+      <td>0.2100</td>
+      <td>0.2000</td>
+      <td>...</td>
+      <td>-16.91</td>
+      <td>0.0</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.0</td>
+      <td>1.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.0</td>
+      <td>45</td>
+    </tr>
+    <tr>
+      <th>9868</th>
+      <td>15EA3590448954112200F9B</td>
+      <td>937694</td>
+      <td>2013-10-06 03:36:12.810000000</td>
+      <td>NaN</td>
+      <td>36</td>
+      <td>Current</td>
+      <td>NaN</td>
+      <td>0.19144</td>
+      <td>0.1550</td>
+      <td>0.1450</td>
+      <td>...</td>
+      <td>-9.78</td>
+      <td>0.0</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.0</td>
+      <td>1.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.0</td>
+      <td>27</td>
+    </tr>
+    <tr>
+      <th>60440</th>
+      <td>6AB035893836614595FE731</td>
+      <td>927758</td>
+      <td>2013-09-24 13:36:49.687000000</td>
+      <td>NaN</td>
+      <td>60</td>
+      <td>Current</td>
+      <td>NaN</td>
+      <td>0.22908</td>
+      <td>0.2045</td>
+      <td>0.1945</td>
+      <td>...</td>
+      <td>-13.29</td>
+      <td>0.0</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.0</td>
+      <td>1.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.0</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <th>112164</th>
+      <td>8A613480206633598DBEB69</td>
+      <td>452839</td>
+      <td>2010-04-05 21:33:18.793000000</td>
+      <td>NaN</td>
+      <td>36</td>
+      <td>Chargedoff</td>
+      <td>2013-01-08 00:00:00</td>
+      <td>0.24822</td>
+      <td>0.2255</td>
+      <td>0.2155</td>
+      <td>...</td>
+      <td>-29.15</td>
+      <td>0.0</td>
+      <td>385.59</td>
+      <td>385.59</td>
+      <td>0.0</td>
+      <td>1.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.0</td>
+      <td>52</td>
     </tr>
   </tbody>
 </table>
@@ -15674,164 +15674,164 @@ memory usage: 68.1+ MB
   </thead>
   <tbody>
     <tr>
-      <th>12475</th>
-      <td>36</td>
-      <td>Completed</td>
-      <td>0.1600</td>
-      <td>NaN</td>
-      <td>0</td>
-      <td>Not available</td>
-      <td>0.0</td>
-      <td>4166.666667</td>
-      <td>NaN</td>
-      <td>5050</td>
-      <td>2007-01-11 00:00:00</td>
-      <td>0</td>
-      <td>48</td>
-    </tr>
-    <tr>
-      <th>33025</th>
+      <th>7844</th>
       <td>36</td>
       <td>Current</td>
-      <td>0.2958</td>
-      <td>E</td>
-      <td>13</td>
+      <td>0.1089</td>
+      <td>A</td>
+      <td>1</td>
       <td>Employed</td>
       <td>0.0</td>
-      <td>4166.666667</td>
+      <td>11666.666667</td>
+      <td>3.0</td>
+      <td>6000</td>
+      <td>2012-11-30 00:00:00</td>
+      <td>0</td>
+      <td>98</td>
+    </tr>
+    <tr>
+      <th>74921</th>
+      <td>36</td>
+      <td>Current</td>
+      <td>0.0869</td>
+      <td>AA</td>
+      <td>1</td>
+      <td>Employed</td>
+      <td>0.0</td>
+      <td>10600.000000</td>
       <td>NaN</td>
       <td>4000</td>
-      <td>2012-07-11 00:00:00</td>
+      <td>2013-10-04 00:00:00</td>
       <td>0</td>
-      <td>47</td>
+      <td>87</td>
     </tr>
     <tr>
-      <th>46881</th>
-      <td>12</td>
-      <td>Completed</td>
-      <td>0.0499</td>
-      <td>AA</td>
-      <td>7</td>
-      <td>Full-time</td>
-      <td>0.0</td>
-      <td>7333.333333</td>
-      <td>NaN</td>
-      <td>3500</td>
-      <td>2011-02-24 00:00:00</td>
-      <td>0</td>
-      <td>47</td>
-    </tr>
-    <tr>
-      <th>47111</th>
+      <th>6720</th>
       <td>36</td>
-      <td>Completed</td>
-      <td>0.1664</td>
+      <td>Current</td>
+      <td>0.1500</td>
       <td>B</td>
       <td>1</td>
       <td>Employed</td>
       <td>0.0</td>
-      <td>4771.833333</td>
-      <td>NaN</td>
-      <td>5000</td>
-      <td>2011-11-30 00:00:00</td>
+      <td>4583.333333</td>
+      <td>1.0</td>
+      <td>9000</td>
+      <td>2013-12-30 00:00:00</td>
       <td>0</td>
-      <td>24</td>
+      <td>1</td>
     </tr>
     <tr>
-      <th>113655</th>
+      <th>33833</th>
       <td>36</td>
       <td>Chargedoff</td>
-      <td>0.1512</td>
-      <td>NaN</td>
-      <td>1</td>
-      <td>Full-time</td>
-      <td>21.0</td>
-      <td>3500.000000</td>
-      <td>NaN</td>
-      <td>6702</td>
-      <td>2008-09-04 00:00:00</td>
-      <td>1</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>27848</th>
-      <td>36</td>
-      <td>Completed</td>
-      <td>0.2419</td>
-      <td>NaN</td>
+      <td>0.2555</td>
+      <td>C</td>
       <td>2</td>
       <td>Full-time</td>
-      <td>2.0</td>
-      <td>2750.000000</td>
-      <td>NaN</td>
-      <td>3000</td>
-      <td>2008-09-04 00:00:00</td>
-      <td>0</td>
-      <td>42</td>
-    </tr>
-    <tr>
-      <th>113348</th>
-      <td>60</td>
-      <td>Current</td>
-      <td>0.1223</td>
-      <td>A</td>
-      <td>7</td>
-      <td>Employed</td>
-      <td>6.0</td>
-      <td>2916.666667</td>
-      <td>NaN</td>
-      <td>8000</td>
-      <td>2012-12-31 00:00:00</td>
-      <td>0</td>
-      <td>134</td>
-    </tr>
-    <tr>
-      <th>68471</th>
-      <td>60</td>
-      <td>Completed</td>
-      <td>0.3027</td>
-      <td>D</td>
-      <td>6</td>
-      <td>Employed</td>
       <td>0.0</td>
-      <td>8166.666667</td>
+      <td>5000.000000</td>
       <td>NaN</td>
-      <td>10000</td>
-      <td>2011-12-30 00:00:00</td>
+      <td>21500</td>
+      <td>2009-12-31 00:00:00</td>
       <td>0</td>
-      <td>40</td>
+      <td>695</td>
     </tr>
     <tr>
-      <th>98504</th>
+      <th>38187</th>
       <td>36</td>
-      <td>Chargedoff</td>
-      <td>0.2300</td>
+      <td>Completed</td>
+      <td>0.0100</td>
+      <td>NaN</td>
+      <td>0</td>
+      <td>Not employed</td>
+      <td>2.0</td>
+      <td>0.000000</td>
+      <td>NaN</td>
+      <td>5000</td>
+      <td>2007-07-27 00:00:00</td>
+      <td>0</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>3701</th>
+      <td>36</td>
+      <td>Completed</td>
+      <td>0.1269</td>
       <td>NaN</td>
       <td>0</td>
       <td>Not available</td>
       <td>0.0</td>
-      <td>208.333333</td>
+      <td>833.333333</td>
       <td>NaN</td>
-      <td>6001</td>
-      <td>2006-11-06 00:00:00</td>
+      <td>3000</td>
+      <td>2006-10-13 00:00:00</td>
       <td>0</td>
-      <td>54</td>
+      <td>43</td>
     </tr>
     <tr>
-      <th>43660</th>
+      <th>66720</th>
       <td>36</td>
-      <td>Completed</td>
-      <td>0.2574</td>
-      <td>D</td>
+      <td>Current</td>
+      <td>0.1715</td>
+      <td>C</td>
       <td>1</td>
       <td>Employed</td>
-      <td>0.0</td>
-      <td>3791.666667</td>
-      <td>1.0</td>
-      <td>10000</td>
-      <td>2011-11-09 00:00:00</td>
+      <td>2.0</td>
+      <td>5666.666667</td>
+      <td>NaN</td>
+      <td>15000</td>
+      <td>2014-03-07 00:00:00</td>
       <td>0</td>
-      <td>85</td>
+      <td>48</td>
+    </tr>
+    <tr>
+      <th>6805</th>
+      <td>60</td>
+      <td>Current</td>
+      <td>0.2220</td>
+      <td>C</td>
+      <td>2</td>
+      <td>Employed</td>
+      <td>1.0</td>
+      <td>3833.333333</td>
+      <td>1.0</td>
+      <td>15000</td>
+      <td>2012-05-02 00:00:00</td>
+      <td>0</td>
+      <td>238</td>
+    </tr>
+    <tr>
+      <th>2888</th>
+      <td>60</td>
+      <td>Current</td>
+      <td>0.2870</td>
+      <td>D</td>
+      <td>20</td>
+      <td>Other</td>
+      <td>0.0</td>
+      <td>5000.000000</td>
+      <td>NaN</td>
+      <td>5500</td>
+      <td>2012-07-05 00:00:00</td>
+      <td>0</td>
+      <td>52</td>
+    </tr>
+    <tr>
+      <th>21165</th>
+      <td>36</td>
+      <td>Completed</td>
+      <td>0.2000</td>
+      <td>NaN</td>
+      <td>6</td>
+      <td>Full-time</td>
+      <td>1.0</td>
+      <td>2750.000000</td>
+      <td>NaN</td>
+      <td>1000</td>
+      <td>2008-08-26 00:00:00</td>
+      <td>0</td>
+      <td>52</td>
     </tr>
   </tbody>
 </table>
@@ -17427,7 +17427,7 @@ jp-needs-light-background
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x2194fb7a6c8&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x1de9506bf08&gt;</pre>
 </div>
 
 </div>
